spices/ecs/tests/errors/set-without-cap.tur
;; I4 negative regression: set-Pos! now requires a ^borrow WriteCap<Pos>
;; as its first argument.  A call site that omits the cap (or passes
;; the wrong shape) fails to elaborate with a clear arity / type error.
;; The pre-I4 surface accepted `(set-Pos! w e v)` and silently ignored
;; the write-set declaration -- the load-bearing safety hole the plan
;; was filed to close.

(defmodule set_without_cap_test
  (export)

(import ecs/entity  :refer [entity-index])
(import ecs/storage :refer [dense-new dense-set! dense-get dense-has?])
(import ecs/world   :refer [defcomponent defworld defcomponent-accessors world-alloc-entity!])
(import ecs/cap     :refer [WriteCap ReadCap])

(defstruct Pos [x : int y : int])

(defcomponent Pos)

(defworld GameWorld [Pos])
(defcomponent-accessors GameWorld Pos)

(defn main [] : int
  (let [w (make-struct GameWorld (vec-new) (:: (dense-new) (Storage Pos)))
        e (world-alloc-entity! (.gens w))]
    (set-Pos! w (entity-index e) (make-struct Pos 7 8))   ;; ERROR: missing cap arg
    0))

) ;; end defmodule set_without_cap_test
